// Copy this text, paste to https://dbdiagram.io/d
// Or, https://databasediagram.com/app

Table Address {
    id INTEGER [primary key]
    customer_id INTEGER 
    street VARCHAR 
    city VARCHAR 
    postal_code VARCHAR 
    }

Table Customer {
    id INTEGER [primary key]
    name VARCHAR 
    credit_limit FLOAT 
    balance FLOAT 
    }

Table Category {
    id INTEGER [primary key]
    name VARCHAR 
    }

Table Employee {
    id INTEGER [primary key]
    name VARCHAR 
    position VARCHAR 
    }

Table Inventory {
    id INTEGER [primary key]
    product_id INTEGER 
    quantity INTEGER 
    }

Table Product {
    id INTEGER [primary key]
    name VARCHAR 
    price FLOAT 
    }

Table Order {
    id INTEGER [primary key]
    customer_id INTEGER 
    order_date DATETIME 
    amount_total FLOAT 
    notes VARCHAR 
    }

Table OrderItem {
    id INTEGER [primary key]
    order_id INTEGER 
    product_id INTEGER 
    quantity INTEGER 
    unit_price FLOAT 
    total_price FLOAT 
    }

Table Payment {
    id INTEGER [primary key]
    order_id INTEGER 
    amount_paid FLOAT 
    }

Table Promotion {
    id INTEGER [primary key]
    description VARCHAR 
    discount FLOAT 
    }

Table Shipment {
    id INTEGER [primary key]
    order_id INTEGER 
    shipment_date DATETIME 
    }

Table Supplier {
    id INTEGER [primary key]
    name VARCHAR 
    }



// Relationships
    Ref: Address.(customer_id) < Customer.(id)
    Ref: Inventory.(product_id) < Product.(id)
    Ref: Order.(customer_id) < Customer.(id)
    Ref: OrderItem.(order_id) < Order.(id)
    Ref: OrderItem.(product_id) < Product.(id)
    Ref: Payment.(order_id) < Order.(id)
    Ref: Shipment.(order_id) < Order.(id)
